--- a/index.css
+++ b/index.css
@@ -21,6 +21,23 @@ body,
   transition: all 0.3s ease-in-out;
 }
 
+.grid-rows-masonry {
+  display: grid;
+  justify-content: center !important;
+  align-items: center !important;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.mxAuto {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+.orange-gradient {
+  z-index: 1;
+  background: linear-gradient(360deg, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+}
+
 .hidden {
   display: hidden;
 }
